--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Database connection settings
 spring.datasource.url=jdbc:mysql://localhost:3306/coding_events
-spring.datasource.username=user
-spring.datasource.password=password
+spring.datasource.username=MySQL80
+spring.datasource.password=codingQUEEN2023!
 
 # Specify the DBMS
 spring.jpa.database = MYSQL
