created AbstractEntity class

--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,10 +1,9 @@
+<<<<<<<=HEAD
+=\=\=\=\=\=\=
+>>>>>>>=0272eb9801ecf8dcc7310b45907cf1f9e54a99df
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
-<<<<<<< HEAD
-distributionUrl=https\://services.gradle.org/distributions/gradle-8.1.1-bin.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-7.2-bin.zip
 networkTimeout=10000
-=======
-distributionUrl=https\://services.gradle.org/distributions/gradle-6.3-bin.zip
->>>>>>> 0272eb9801ecf8dcc7310b45907cf1f9e54a99df
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
